deploy: 847d412b5ab2e0e99172b818fc7bb72f98a82ea1

--- a/method_list.html
+++ b/method_list.html
@@ -86,13 +86,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="RedAmber/ArrowFunction.html#arrow_doc-class_method" title="RedAmber::ArrowFunction.arrow_doc (method)">arrow_doc</a></span>
+      <small>RedAmber::ArrowFunction</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameVariableOperation.html#assign-instance_method" title="RedAmber::DataFrameVariableOperation#assign (method)">#assign</a></span>
       <small>RedAmber::DataFrameVariableOperation</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameVariableOperation.html#assign_left-instance_method" title="RedAmber::DataFrameVariableOperation#assign_left (method)">#assign_left</a></span>
       <small>RedAmber::DataFrameVariableOperation</small>
@@ -100,7 +108,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameLoadSave.html#auto_cast-instance_method" title="RedAmber::DataFrameLoadSave#auto_cast (method)">#auto_cast</a></span>
       <small>RedAmber::DataFrameLoadSave</small>
@@ -108,7 +116,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#boolean%3F-instance_method" title="RedAmber::Vector#boolean? (method)">#boolean?</a></span>
       <small>RedAmber::Vector</small>
@@ -116,7 +124,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#chunked%3F-instance_method" title="RedAmber::Vector#chunked? (method)">#chunked?</a></span>
       <small>RedAmber::Vector</small>
@@ -124,15 +132,15 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorFunctions.html#coerce-instance_method" title="RedAmber::VectorFunctions#coerce (method)">#coerce</a></span>
-      <small>RedAmber::VectorFunctions</small>
+      <span class='object_link'><a href="RedAmber/Vector.html#coerce-instance_method" title="RedAmber::Vector#coerce (method)">#coerce</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#concatenate-instance_method" title="RedAmber::DataFrameCombinable#concatenate (method)">#concatenate</a></span>
       <small>RedAmber::DataFrameCombinable</small>
@@ -140,7 +148,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Group.html#count-instance_method" title="RedAmber::Group#count (method)">#count</a></span>
       <small>RedAmber::Group</small>
@@ -148,7 +156,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#create-class_method" title="RedAmber::Vector.create (method)">create</a></span>
       <small>RedAmber::Vector</small>
@@ -156,7 +164,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#create-class_method" title="RedAmber::DataFrame.create (method)">create</a></span>
       <small>RedAmber::DataFrame</small>
@@ -164,7 +172,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#data-instance_method" title="RedAmber::Vector#data (method)">#data</a></span>
       <small>RedAmber::Vector</small>
@@ -172,7 +180,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Group.html#dataframe-instance_method" title="RedAmber::Group#dataframe (method)">#dataframe</a></span>
       <small>RedAmber::Group</small>
@@ -180,7 +188,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#dictionary%3F-instance_method" title="RedAmber::Vector#dictionary? (method)">#dictionary?</a></span>
       <small>RedAmber::Vector</small>
@@ -188,7 +196,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#difference-instance_method" title="RedAmber::DataFrameCombinable#difference (method)">#difference</a></span>
       <small>RedAmber::DataFrameCombinable</small>
@@ -196,7 +204,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameVariableOperation.html#drop-instance_method" title="RedAmber::DataFrameVariableOperation#drop (method)">#drop</a></span>
       <small>RedAmber::DataFrameVariableOperation</small>
@@ -204,7 +212,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/VectorSelectable.html#drop_nil-instance_method" title="RedAmber::VectorSelectable#drop_nil (method)">#drop_nil</a></span>
       <small>RedAmber::VectorSelectable</small>
@@ -212,7 +220,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Group.html#each-instance_method" title="RedAmber::Group#each (method)">#each</a></span>
       <small>RedAmber::Group</small>
@@ -220,7 +228,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#each-instance_method" title="RedAmber::Vector#each (method)">#each</a></span>
       <small>RedAmber::Vector</small>
@@ -228,7 +236,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#each_row-instance_method" title="RedAmber::DataFrame#each_row (method)">#each_row</a></span>
       <small>RedAmber::DataFrame</small>
@@ -236,7 +244,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#empty%3F-instance_method" title="RedAmber::Vector#empty? (method)">#empty?</a></span>
       <small>RedAmber::Vector</small>
@@ -244,7 +252,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#empty%3F-instance_method" title="RedAmber::DataFrame#empty? (method)">#empty?</a></span>
       <small>RedAmber::DataFrame</small>
@@ -252,7 +260,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/VectorSelectable.html#filter-instance_method" title="RedAmber::VectorSelectable#filter (method)">#filter</a></span>
       <small>RedAmber::VectorSelectable</small>
@@ -260,7 +268,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#filter-instance_method" title="RedAmber::DataFrameSelectable#filter (method)">#filter</a></span>
       <small>RedAmber::DataFrameSelectable</small>
@@ -268,10 +276,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Group.html#filters-instance_method" title="RedAmber::Group#filters (method)">#filters</a></span>
       <small>RedAmber::Group</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/ArrowFunction.html#find-class_method" title="RedAmber::ArrowFunction.find (method)">find</a></span>
+      <small>RedAmber::ArrowFunction</small>
     </div>
   </li>
   
@@ -462,8 +478,8 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorFunctions.html#is_na-instance_method" title="RedAmber::VectorFunctions#is_na (method)">#is_na</a></span>
-      <small>RedAmber::VectorFunctions</small>
+      <span class='object_link'><a href="RedAmber/Vector.html#is_na-instance_method" title="RedAmber::Vector#is_na (method)">#is_na</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
@@ -662,16 +678,16 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorFunctions.html#quantile-instance_method" title="RedAmber::VectorFunctions#quantile (method)">#quantile</a></span>
-      <small>RedAmber::VectorFunctions</small>
+      <span class='object_link'><a href="RedAmber/Vector.html#quantile-instance_method" title="RedAmber::Vector#quantile (method)">#quantile</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorFunctions.html#quantiles-instance_method" title="RedAmber::VectorFunctions#quantiles (method)">#quantiles</a></span>
-      <small>RedAmber::VectorFunctions</small>
+      <span class='object_link'><a href="RedAmber/Vector.html#quantiles-instance_method" title="RedAmber::Vector#quantiles (method)">#quantiles</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
@@ -742,8 +758,8 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorFunctions.html#sd-instance_method" title="RedAmber::VectorFunctions#sd (method)">#sd</a></span>
-      <small>RedAmber::VectorFunctions</small>
+      <span class='object_link'><a href="RedAmber/Vector.html#sd-instance_method" title="RedAmber::Vector#sd (method)">#sd</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
@@ -1054,8 +1070,8 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorFunctions.html#unbiased_variance-instance_method" title="RedAmber::VectorFunctions#unbiased_variance (method)">#unbiased_variance</a></span>
-      <small>RedAmber::VectorFunctions</small>
+      <span class='object_link'><a href="RedAmber/Vector.html#unbiased_variance-instance_method" title="RedAmber::Vector#unbiased_variance (method)">#unbiased_variance</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
