deploy: aa882edc04ee0297406b95c40f7524bffd3aabb9

--- a/method_list.html
+++ b/method_list.html
@@ -710,13 +710,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="RedAmber/VectorSelectable.html#rank-instance_method" title="RedAmber::VectorSelectable#rank (method)">#rank</a></span>
+      <small>RedAmber::VectorSelectable</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#remove-instance_method" title="RedAmber::DataFrameSelectable#remove (method)">#remove</a></span>
       <small>RedAmber::DataFrameSelectable</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#remove_nil-instance_method" title="RedAmber::DataFrameSelectable#remove_nil (method)">#remove_nil</a></span>
       <small>RedAmber::DataFrameSelectable</small>
@@ -724,7 +732,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameVariableOperation.html#rename-instance_method" title="RedAmber::DataFrameVariableOperation#rename (method)">#rename</a></span>
       <small>RedAmber::DataFrameVariableOperation</small>
@@ -732,7 +740,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/VectorUpdatable.html#replace-instance_method" title="RedAmber::VectorUpdatable#replace (method)">#replace</a></span>
       <small>RedAmber::VectorUpdatable</small>
@@ -740,7 +748,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#respond_to_missing%3F-instance_method" title="RedAmber::DataFrame#respond_to_missing? (method)">#respond_to_missing?</a></span>
       <small>RedAmber::DataFrame</small>
@@ -748,10 +756,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#right_join-instance_method" title="RedAmber::DataFrameCombinable#right_join (method)">#right_join</a></span>
       <small>RedAmber::DataFrameCombinable</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/VectorSelectable.html#sample-instance_method" title="RedAmber::VectorSelectable#sample (method)">#sample</a></span>
+      <small>RedAmber::VectorSelectable</small>
     </div>
   </li>
   
@@ -846,87 +862,7 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/DataFrameIndexable.html#sort-instance_method" title="RedAmber::DataFrameIndexable#sort (method)">#sort</a></span>
-      <small>RedAmber::DataFrameIndexable</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/DataFrameIndexable.html#sort_indices-instance_method" title="RedAmber::DataFrameIndexable#sort_indices (method)">#sort_indices</a></span>
-      <small>RedAmber::DataFrameIndexable</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorUpdatable.html#split-instance_method" title="RedAmber::VectorUpdatable#split (method)">#split</a></span>
-      <small>RedAmber::VectorUpdatable</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorUpdatable.html#split_to_columns-instance_method" title="RedAmber::VectorUpdatable#split_to_columns (method)">#split_to_columns</a></span>
-      <small>RedAmber::VectorUpdatable</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorUpdatable.html#split_to_rows-instance_method" title="RedAmber::VectorUpdatable#split_to_rows (method)">#split_to_rows</a></span>
-      <small>RedAmber::VectorUpdatable</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/Vector.html#string%3F-instance_method" title="RedAmber::Vector#string? (method)">#string?</a></span>
-      <small>RedAmber::Vector</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/Group.html#summarize-instance_method" title="RedAmber::Group#summarize (method)">#summarize</a></span>
-      <small>RedAmber::Group</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#summary-instance_method" title="RedAmber::DataFrameDisplayable#summary (method)">#summary</a></span>
-      <small>RedAmber::DataFrameDisplayable</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/DataFrame.html#table-instance_method" title="RedAmber::DataFrame#table (method)">#table</a></span>
-      <small>RedAmber::DataFrame</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#tail-instance_method" title="RedAmber::DataFrameSelectable#tail (method)">#tail</a></span>
-      <small>RedAmber::DataFrameSelectable</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorSelectable.html#take-instance_method" title="RedAmber::VectorSelectable#take (method)">#take</a></span>
+      <span class='object_link'><a href="RedAmber/VectorSelectable.html#sort-instance_method" title="RedAmber::VectorSelectable#sort (method)">#sort</a></span>
       <small>RedAmber::VectorSelectable</small>
     </div>
   </li>
@@ -934,13 +870,101 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrameIndexable.html#sort-instance_method" title="RedAmber::DataFrameIndexable#sort (method)">#sort</a></span>
+      <small>RedAmber::DataFrameIndexable</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrameIndexable.html#sort_indices-instance_method" title="RedAmber::DataFrameIndexable#sort_indices (method)">#sort_indices</a></span>
+      <small>RedAmber::DataFrameIndexable</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/VectorUpdatable.html#split-instance_method" title="RedAmber::VectorUpdatable#split (method)">#split</a></span>
+      <small>RedAmber::VectorUpdatable</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/VectorUpdatable.html#split_to_columns-instance_method" title="RedAmber::VectorUpdatable#split_to_columns (method)">#split_to_columns</a></span>
+      <small>RedAmber::VectorUpdatable</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/VectorUpdatable.html#split_to_rows-instance_method" title="RedAmber::VectorUpdatable#split_to_rows (method)">#split_to_rows</a></span>
+      <small>RedAmber::VectorUpdatable</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/Vector.html#string%3F-instance_method" title="RedAmber::Vector#string? (method)">#string?</a></span>
+      <small>RedAmber::Vector</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/Group.html#summarize-instance_method" title="RedAmber::Group#summarize (method)">#summarize</a></span>
+      <small>RedAmber::Group</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#summary-instance_method" title="RedAmber::DataFrameDisplayable#summary (method)">#summary</a></span>
+      <small>RedAmber::DataFrameDisplayable</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrame.html#table-instance_method" title="RedAmber::DataFrame#table (method)">#table</a></span>
+      <small>RedAmber::DataFrame</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#tail-instance_method" title="RedAmber::DataFrameSelectable#tail (method)">#tail</a></span>
+      <small>RedAmber::DataFrameSelectable</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/VectorSelectable.html#take-instance_method" title="RedAmber::VectorSelectable#take (method)">#take</a></span>
+      <small>RedAmber::VectorSelectable</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#take-instance_method" title="RedAmber::DataFrameSelectable#take (method)">#take</a></span>
       <small>RedAmber::DataFrameSelectable</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#tally-instance_method" title="RedAmber::Vector#tally (method)">#tally</a></span>
       <small>RedAmber::Vector</small>
@@ -948,7 +972,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#tdr-instance_method" title="RedAmber::DataFrameDisplayable#tdr (method)">#tdr</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -956,7 +980,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#tdr_str-instance_method" title="RedAmber::DataFrameDisplayable#tdr_str (method)">#tdr_str</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -964,7 +988,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#temporal%3F-instance_method" title="RedAmber::Vector#temporal? (method)">#temporal?</a></span>
       <small>RedAmber::Vector</small>
@@ -972,7 +996,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#to_a-instance_method" title="RedAmber::DataFrame#to_a (method)">#to_a</a></span>
       <small>RedAmber::DataFrame</small>
@@ -980,7 +1004,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#to_ary-instance_method" title="RedAmber::Vector#to_ary (method)">#to_ary</a></span>
       <small>RedAmber::Vector</small>
@@ -988,7 +1012,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#to_h-instance_method" title="RedAmber::DataFrame#to_h (method)">#to_h</a></span>
       <small>RedAmber::DataFrame</small>
@@ -996,7 +1020,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#to_iruby-instance_method" title="RedAmber::DataFrameDisplayable#to_iruby (method)">#to_iruby</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -1004,7 +1028,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameReshaping.html#to_long-instance_method" title="RedAmber::DataFrameReshaping#to_long (method)">#to_long</a></span>
       <small>RedAmber::DataFrameReshaping</small>
@@ -1012,7 +1036,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#to_rover-instance_method" title="RedAmber::DataFrame#to_rover (method)">#to_rover</a></span>
       <small>RedAmber::DataFrame</small>
@@ -1020,7 +1044,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#to_s-instance_method" title="RedAmber::Vector#to_s (method)">#to_s</a></span>
       <small>RedAmber::Vector</small>
@@ -1028,7 +1052,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#to_s-instance_method" title="RedAmber::DataFrameDisplayable#to_s (method)">#to_s</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -1036,7 +1060,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameReshaping.html#to_wide-instance_method" title="RedAmber::DataFrameReshaping#to_wide (method)">#to_wide</a></span>
       <small>RedAmber::DataFrameReshaping</small>
@@ -1044,7 +1068,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameReshaping.html#transpose-instance_method" title="RedAmber::DataFrameReshaping#transpose (method)">#transpose</a></span>
       <small>RedAmber::DataFrameReshaping</small>
@@ -1052,7 +1076,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#type-instance_method" title="RedAmber::Vector#type (method)">#type</a></span>
       <small>RedAmber::Vector</small>
@@ -1060,7 +1084,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#type_class-instance_method" title="RedAmber::Vector#type_class (method)">#type_class</a></span>
       <small>RedAmber::Vector</small>
@@ -1068,7 +1092,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#type_classes-instance_method" title="RedAmber::DataFrame#type_classes (method)">#type_classes</a></span>
       <small>RedAmber::DataFrame</small>
@@ -1076,7 +1100,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#types-instance_method" title="RedAmber::DataFrame#types (method)">#types</a></span>
       <small>RedAmber::DataFrame</small>
@@ -1084,7 +1108,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#unbiased_variance-instance_method" title="RedAmber::Vector#unbiased_variance (method)">#unbiased_variance</a></span>
       <small>RedAmber::Vector</small>
@@ -1092,7 +1116,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#union-instance_method" title="RedAmber::DataFrameCombinable#union (method)">#union</a></span>
       <small>RedAmber::DataFrameCombinable</small>
@@ -1100,7 +1124,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#v-instance_method" title="RedAmber::DataFrameSelectable#v (method)">#v</a></span>
       <small>RedAmber::DataFrameSelectable</small>
@@ -1108,7 +1132,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#value_counts-instance_method" title="RedAmber::Vector#value_counts (method)">#value_counts</a></span>
       <small>RedAmber::Vector</small>
@@ -1116,7 +1140,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#variables-instance_method" title="RedAmber::DataFrame#variables (method)">#variables</a></span>
       <small>RedAmber::DataFrame</small>
@@ -1124,7 +1148,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#vectors-instance_method" title="RedAmber::DataFrame#vectors (method)">#vectors</a></span>
       <small>RedAmber::DataFrame</small>
