--- a/method_list.html
+++ b/method_list.html
@@ -606,6 +606,22 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="RedAmber/Vector.html#fdiv-instance_method" title="RedAmber::Vector#fdiv (method)">#fdiv</a></span>
+      <small>RedAmber::Vector</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/Vector.html#fdiv_checked-instance_method" title="RedAmber::Vector#fdiv_checked (method)">#fdiv_checked</a></span>
+      <small>RedAmber::Vector</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#fill_null_backward-instance_method" title="RedAmber::Vector#fill_null_backward (method)">#fill_null_backward</a></span>
       <small>RedAmber::Vector</small>
     </div>
@@ -1446,22 +1462,6 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/Vector.html#quotient-instance_method" title="RedAmber::Vector#quotient (method)">#quotient</a></span>
-      <small>RedAmber::Vector</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="RedAmber/Vector.html#quotient_checked-instance_method" title="RedAmber::Vector#quotient_checked (method)">#quotient_checked</a></span>
-      <small>RedAmber::Vector</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
       <span class='object_link'><a href="RedAmber/VectorSelectable.html#rank-instance_method" title="RedAmber::VectorSelectable#rank (method)">#rank</a></span>
       <small>RedAmber::VectorSelectable</small>
     </div>
@@ -1472,6 +1472,22 @@
     <div class="item">
       <span class='object_link'><a href="RedAmber/SubFrames.html#reject-instance_method" title="RedAmber::SubFrames#reject (method)">#reject</a></span>
       <small>RedAmber::SubFrames</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/Vector.html#remainder-instance_method" title="RedAmber::Vector#remainder (method)">#remainder</a></span>
+      <small>RedAmber::Vector</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/Vector.html#remainder_checked-instance_method" title="RedAmber::Vector#remainder_checked (method)">#remainder_checked</a></span>
+      <small>RedAmber::Vector</small>
     </div>
   </li>
   
